# smali

./: Cargo.toml  README.MD  TODO.md
examples/: main.rs
src/: annotation.rs  class.rs  field.rs  field_ref.rs  lib.rs  method.rs  method_ref.rs  modifier.rs  object_identifier.rs  param.rs  smali_instructions.rs  smali_ops.rs  smali_parse.rs  smali_write.rs  types.rs
src/dex/: dex_file.rs  encoded_values.rs  error.rs  instructions.rs  leb.rs  mod.rs  opcode_format.rs  opcodes.rs
src/op/: dex_op.rs  mod.rs
src/signature/: method_signature.rs  mod.rs  type_signature.rs
tests/: Request.smali  rw_test.smali
