[package]
name = "smali-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A library to read and write Android disassembly smali files."
readme = "README.MD"
repository = "https://github.com/suprohub/smali"
keywords = ["android", "dex", "dalvik", "java", "smali"]
exclude = [ ".gitignore", ".idea/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
num-traits = "0.2"
#nom = "8"
anyhow = "1.0"
winnow = "0.7"
